relocated physical directory

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 		<h2> Candy Shop</h2>
 		<div id="order">
 		<label>Chocolate</label> <input id="chocolate" type="text">
-		<button id="choOneMore" onclick="chocolateOne()">One More?</button>
+		<button id="chocolateMore" onclick="chocolateOne()">One More?</button>
 		<br>
 		<label>Lemon</label><input id="lemon" type="text">
-		<button id="choOneMore" onclick="lemonOne()">One More?</button>
+		<button id="lemoMore" onclick="lemonOne()">One More?</button>
 		<br>
 		<label>Sugar</label><input id="sugar" type="text">
-		<button id="choOneMore" onclick="sugarOne()">One More?</button>
+		<button id="sugarMore" onclick="sugarOne()">One More?</button>
 		<br>
 		<input id="submit_order" type="submit" value="Bulk Order" onclick="order()">
 		<input id="clear" type="submit" value="Feeling Quity??" onclick="clearHistory()">
